<resources>
    <string name="app_name">Produvar B.V.</string>

    <string name="main_scanning_info">Approach your device to NFC tag or open camera.\n\nClick \'?\' to get more information.</string>
    <string name="scanner_camera_info">Point the camera at QR code or a Barcode placed on/in an order</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="login_tab_account">Account</string>
    <string name="login_tab_qr_code">QR code</string>
    <string name="login_camera_info">Point the camera at authorization QR code</string>
    <string name="login_error_field_required">This field is required</string>
    <string name="login_error_invalid_email">Email is invalid</string>
    <string name="login_prompt_username">Email</string>
    <string name="login_prompt_password">Password</string>
    <string name="login_sign_in_button">SIGN IN FOR 24 HOURS</string>
    <string name="login_qr_wrong_format_title">Wrong format</string>
    <string name="login_qr_wrong_format_message">Make sure you are scanning the appropriate authorization tag</string>
    <string name="login_qr_not_found_title">Tag not found</string>
    <string name="login_qr_not_found_message">There is no such authorization tag in Produvar\'s system.</string>
    <string name="login_personal_not_found_title">User not found</string>
    <string name="login_personal_not_found_message">The user name or password is incorrect. Check input data and try again.</string>
    <string name="profile_logout_info">You were logged in for 24 hours\n(until %1$s)\nwith %2$s</string>
    <string name="profile_login_type_personal">your personal account.</string>
    <string name="profile_login_type_qr">authorization code.</string>
    <string name="profile_welcome">Welcome, %1$s!</string>
    <string name="profile_welcome_qr">dear customer</string>
    <string name="profile_username">(%1$s)</string>
    <string name="profile_button_logout">LOG OUT NOW</string>
    <string name="profile_authorization_expired">Your 24 hour authorization has been expired. Please, authorize again.</string>


    <string name="taginfo_title">Scan result</string>
    <string name="taginfo_error_message">This tag is currently not supported</string>
    <string name="taginfo_manufacturer_header">Manufacturer</string>
    <string name="taginfo_oreder_info_header">Order info</string>
    <string name="taginfo_items_header">Items ordered</string>
    <string name="taginfo_process_header">Messages</string>
    <string name="taginfo_status_update">UPDATE STATUS</string>
    <string name="taginfo_status_flow_header">Status flow</string>
    <string name="location_scanner_camera_info">Point the camera at QR code or a Barcode describing location</string>
    <string name="taginfo_update_status_header">Update status</string>
    <string name="prompt_location">Location (optional)</string>
    <string name="prompt_description">Comment (optional)</string>
    <string name="additional_info_tip">If you are a customer or an employee, please log in to get more detailed information about an order</string>
    <string name="taginfo_not_found">This tag was not found in our systems or there are problems with the service</string>
    <string name="taginfo_update_confirmation_header">You are going to update status of an order</string>
    <string name="taginfo_update_confirmation_from">From: </string>
    <string name="taginfo_update_confirmation_to">To: </string>
    <string name="taginfo_update_confirmation">Pressing OK you confirm the action.</string>
    <string name="taginfo_error_status">Sent current status does not match the current order status.\n\nProbably someone has already changed the status of this order or there are problems with the server.\n\nClick refresh and try again.</string>
    <string name="taginfo_error_unknown">The status was not updated. You are not allowed to update the status or there are problems with the service.</string>
    <string name="taginfo_update_success">The status was successfully updated. Press refresh to view updated information</string>
    <string name="taginfo_update_refresh">Press refresh to view updated information</string>


    <string name="permissions_info">For correct work the application needs the following permission(s):</string>
    <string name="permissions_internet_info">In order to transmit and receive data</string>
    <string name="permissions_camera_info">In order to scan QR and bar codes</string>
    <string name="permissions_nfc_info">In order to scan NFC tags</string>
    <string name="permissions_button">ALLOW</string>

    <string name="help_swipe_right_info">Swipe to right to open camera and scan a QR code or a barcode</string>
    <string name="help_swipe_left_info">Swipe to left to open authorization screen. You can probably get more information from a tag, if you are authorized.</string>
    <string name="help_nfc">You can also approach your device to read a NFC tag. Even when the application is closed.</string>
    <string name="help_contact_info">if you have any problems</string>
    <string name="help_contact_button">CONTACT US</string>
    <string name="help_produvar_url">https://www.produvar.com/contact/</string>

    <string name="error_internet_connection">Internet is needed to perform this request. Please, connect to the internet and try again.</string>
    <string name="error_unknown">Service is unavailable or there are problems with your internet connection</string>
    <string name="error_refresh">Device should be connected to the internet to be able to refresh</string>

    <string name="description_taginfo_error_logo">Error logo</string>
    <string name="description_main_logo">Logo of Produvar company</string>
    <string name="description_main_back">Return to main page</string>
    <string name="description_toolbar_produvar_name">Produvar name logo</string>
    <string name="description_toolbar_profile">Open login page</string>
    <string name="description_toolbar_camera">Open a camera to scan QR code or Bar code</string>
    <string name="description_main_helper">Opens helper window</string>
    <string name="description_main_options">Opens settings window</string>
    <string name="description_help_swipe_left">Swipe to left icon</string>
    <string name="description_help_swipe_right">Swipe to right icon</string>
    <string name="description_permissions_internet">Internet connection</string>
    <string name="description_permissions_camera">Camera</string>
    <string name="description_permissions_nfc">NFC</string>
    <string name="description_location_camera">Open camera to scan location barcode</string>
    <string name="description_main_refresh">Refresh button</string>

</resources>