<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/produvarOrangeTransparent"
    tools:context=".activities.help.HelpActivity"
    tools:ignore="UseCompoundDrawables">

    <ImageButton
        android:id="@+id/button_close"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_main_back"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_help_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/row_swipe_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toTopOf="@+id/row_swipe_left"
        app:layout_constraintStart_toStartOf="@+id/row_swipe_left">

        <ImageView

            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/description_help_swipe_right"
            android:src="@drawable/help_swipe_right"
            android:tint="@color/produvarLight" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="250dp"
            android:layout_marginStart="10dp"
            android:text="@string/help_swipe_right_info"
            android:textColor="@color/produvarLight"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_swipe_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45">

        <ImageView

            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/description_help_swipe_left"
            android:src="@drawable/help_swipe_left"
            android:tint="@color/produvarLight" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:maxWidth="250dp"
            android:text="@string/help_swipe_left_info"
            android:textColor="@color/produvarLight"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_nfc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        app:layout_constraintStart_toStartOf="@+id/row_swipe_left"
        app:layout_constraintTop_toBottomOf="@+id/row_swipe_left">

        <ImageView

            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/description_help_swipe_left"
            android:src="@drawable/help_nfc"
            android:tint="@color/produvarLight" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="250dp"
            android:layout_marginStart="10dp"
            android:text="@string/help_nfc"
            android:textColor="@color/produvarLight"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_contact"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginBottom="3dp"
        android:background="@drawable/button_stroke_white"
        android:text="@string/help_contact_button"
        android:textColor="@color/produvarLight"
        app:layout_constraintBottom_toTopOf="@+id/contact_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/contact_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_contact_info"
        android:textColor="@color/produvarLight"
        android:textSize="14sp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>