<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:background="@drawable/custom_alert_shape"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">
    <ImageView
        android:id="@+id/company_logo"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/description_main_logo"
        android:scaleType="fitCenter"
        android:src="@drawable/produvar_logo"/>
    <TextView
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:text="@string/taginfo_update_confirmation_header"
        android:textAlignment="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/from_header"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:text="@string/taginfo_update_confirmation_from"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/from_status"
        android:layout_marginTop="3dp"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:textStyle="italic"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/to_header"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:text="@string/taginfo_update_confirmation_to"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/to_status"
        android:layout_marginTop="3dp"
        android:textSize="18sp"
        android:layout_marginStart="10dp"
        android:textStyle="italic"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:text="@string/taginfo_update_confirmation"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



    <android.support.constraint.ConstraintLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style= "?android:attr/buttonBarStyle">
        <Button
            android:id="@+id/yes_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:textSize="18sp"
            android:text="@android:string/ok"
            android:textColor="@color/produvarOrange"
            app:layout_constraintEnd_toEndOf="parent"/>
        <Button
            android:id="@+id/no_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_height="40dp"
            android:textSize="18sp"
            android:text="@android:string/cancel"
            android:textColor="@color/produvarOrange" />

    </android.support.constraint.ConstraintLayout>


</LinearLayout>