<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/produvarOrange"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--<include-->
            <!--android:id="@+id/status_bar"-->
            <!--layout="@layout/status_bar_main" />-->

        <include
            android:id="@+id/toolbar_profile"
            layout="@layout/toolbar_profile" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content_authorization"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar">
        <android.support.design.widget.TabLayout
            android:id="@+id/auth_tab_layout"
            style="@style/AppTabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:id="@+id/auth_frame_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:paddingTop="10dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content_profile_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_bar"
        app:layout_constraintVertical_bias="0.3">


        <ImageView
            android:id="@+id/profile_logo"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/description_main_logo"
            android:scaleType="fitCenter"
            android:src="@drawable/produvar_namelogo_white" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textAlignment="center"
            android:textColor="@color/produvarLight"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profile_email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textAlignment="center"
            android:textColor="@color/produvarLight"
            android:textSize="16sp"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/profile_role"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:visibility="gone"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/produvarLight"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/profile_login_info"
            android:layout_width="300dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:textColor="@color/produvarLight"
            android:textSize="15sp"
            android:text="@string/profile_logout_info"/>
        <Button
            android:id="@+id/button_logout"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_stroke_white"
            android:text="@string/profile_button_logout"
            android:textColor="@color/produvarLight" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>

